2005-03-21  Andras Varga

	* omnetapp.cc: fixed memory leak in shutdown code: RNG objects 
	didn't get freed in TOmnetApp destructor. [discovered and patch 
	provided by Nigel Sheridan-Smith]

2005-03-18  Andras Varga

	* cinifile.h/cc: implemented getAsFilenames(), getBaseDirectoryFor(),
	getLocation() functions in cInifile: the class now remembers from which
	ini file every entry was read from. Also, class was upgraded to use
	std::vector.

	* the following configuration settings (due to the use of cfg->getAs-
	FileNames() instead of cfg->getAsString()) now became relative to the
	location of the ini file which contains them:
	  [General], load-libs=
	  [Cmdenv], output-file=
	  [Tkenv], bitmap-path=
	  [General], preload-ned-files=
	  [General] or [Run X], output-vector-file=
	  [General] or [Run X], output-scalar-file=
	  [General] or [Run X], snapshot-file=

2005-03-02  Andras Varga

	* omnetapp.cc: fix: RNGs were initialized with run number of the
	previous run

	* omnetapp.h/cc: makeOptionsEffective() merged into readPerRunOptions()

	* omnetapp.cc: fixed ini file imports: included ini file names are now
	understood as relative to the location of the ini file containing the
	"include" directive, rather than to the current working directory.
	E.g. if your omnetpp.ini contains "include ../../settings.ini", then
	settings.ini may now contain "include defaults.ini" (instead of
	"include ../../defaults.ini") to load defaults.ini from the same
	directory.

2005-02-24  Andras Varga

	* cenvir.cc: fix: simple modules etc in dynamically loaded dlls/so's
	([General]/load-libs=, -l command-line option) didn't get registered

2005-02-18  Andras Varga

	* cenvir.cc: ev.printf() fixed: it printed the buffer pointer value
	instead of the string itself. (char buf[20]; strcpy(buf,"hello");
	cout << buf; prints buf's address not "hello"!!!)

	* cenvir.cc: fixed crash caused by writing one char past the
	end of char buffer[1024] in cEnvir::gets().

2005-02-07  Andras Varga
