@@ -1,3 +1,11 @@
+2005-03-22  Andras Varga
+
+	* omnetapp.cc/h, cenvir.cc: cEnvir::getParameter() return type changed
+	from const char * to std::string. This was needed because if the
+	parameter value contains the xmldoc() function, getParameter() will 
+	now modify the file name in it to make it relative to the 
+	position of the ini file the setting was read from.
+
 2005-03-21  Andras Varga
 
 	* omnetapp.cc: fixed memory leak in shutdown code: RNG objects 
